[package]
name = "mqo-parity-coverage-tracker"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
description = "Records parity verdicts (verified|mismatch|never-tested) per (measure, backend-pair) against server builds in an append-only JSONL history store."
license = "MIT"
authors = ["Joe Yen <joe.yen@atscale.com>"]

[[bin]]
name = "parity-tracker"
path = "src/main.rs"

[lib]
name = "mqo_parity_coverage_tracker"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
